@@ -1176,7 +1176,8 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "CSUBTYPEP" "CTYPE" "TYPE-HASH-VALUE" "CTYPE-OF"
                "CTYPE-P" "CTYPEP" "CURRENT-FP" "CURRENT-SP"
                "CURRENT-DYNAMIC-SPACE-START" "DATA-VECTOR-REF"
-               "DATA-VECTOR-SET" "DECODE-DOUBLE-FLOAT"
+               "DATA-VECTOR-SET" "DECLARATION-TYPE-CONFLICT-ERROR"
+	       "DECODE-DOUBLE-FLOAT"
                #!+long-float "DECODE-LONG-FLOAT"
                "DECODE-SINGLE-FLOAT"
                "DEFINED-FTYPE-MATCHES-DECLARED-FTYPE-P"
