@@ -13,6 +13,8 @@ changes in sbcl-0.9.2 relative to sbcl-0.9.1:
   * fixed some bugs revealed by Paul Dietz' test suite:
     ** Invalid dotted lists no longer raise a read error when 
        *READ-SUPPRESS* is T
+    ** Signal an error if a symbol that names a declaration is used
+       as the name of a type, or vice versa
 
 changes in sbcl-0.9.1 relative to sbcl-0.9.0:
   * fixed cross-compiler leakages that prevented building a 32-bit
